src/out/parser.output
Terminals unused in grammar

    BOOLEAN
    ERROR


State 24 conflicts: 18 shift/reduce, 24 reduce/reduce
State 29 conflicts: 2 shift/reduce
State 54 conflicts: 2 shift/reduce, 1 reduce/reduce
State 56 conflicts: 1 shift/reduce
State 65 conflicts: 19 shift/reduce
State 84 conflicts: 16 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 17 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 20 shift/reduce
State 181 conflicts: 49 reduce/reduce
State 182 conflicts: 49 reduce/reduce
State 187 conflicts: 17 shift/reduce
State 194 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce
State 204 conflicts: 19 shift/reduce
State 210 conflicts: 20 shift/reduce, 27 reduce/reduce
State 211 conflicts: 18 shift/reduce
State 212 conflicts: 19 shift/reduce
State 253 conflicts: 1 shift/reduce
State 260 conflicts: 17 shift/reduce
State 281 conflicts: 19 shift/reduce
State 282 conflicts: 1 shift/reduce
State 319 conflicts: 1 shift/reduce
State 320 conflicts: 19 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENT_NAME SEMICOLON routine DOT
    2        | PROGRAM IDENT_NAME SEMICOLON routine
    3        | PROGRAM IDENT_NAME routine DOT
    4        | PROGRAM IDENT_NAME routine

    5 routine: routine_head routine_body

    6 routine_head: const_part type_part var_part routine_part

    7 routine_part: ε
    8             | routine_part fun_decl
    9             | routine_part proc_decl
   10             | fun_decl
   11             | proc_decl

   12 fun_decl: fun_head SEMICOLON routine SEMICOLON
   13         | fun_head SEMICOLON routine
   14         | fun_head routine SEMICOLON
   15         | fun_head routine

   16 fun_head: FUNCTION IDENT_NAME params COLON simple_type

   17 proc_decl: proc_head SEMICOLON routine SEMICOLON
   18          | proc_head routine SEMICOLON
   19          | proc_head SEMICOLON routine
   20          | proc_head routine

   21 proc_head: PROCEDURE IDENT_NAME params

   22 params: ε
   23       | LP params_decl RP

   24 params_decl: params_decl SEMICOLON params_type
   25            | params_type

   26 params_type: VAR name_list COLON simple_type
   27            | name_list COLON simple_type

   28 var_part: ε
   29         | VAR var_decl_list

   30 var_decl_list: var_decl_list var_decl
   31              | var_decl

   32 var_decl: name_list COLON type_decl SEMICOLON
   33         | name_list COLON type_decl

   34 const_part: ε
   35           | CONST const_expr_list

   36 const_expr_list: const_expr_list const_expr
   37                | const_expr

   38 const_expr: identifier EQUAL const_value SEMICOLON
   39           | identifier EQUAL const_value

   40 const_value: INTEGER
   41            | MINUS INTEGER
   42            | CHAR
   43            | STRING
   44            | TRUE
   45            | FALSE
   46            | MAXINT
   47            | MINUS MAXINT

   48 type_part: ε
   49          | TYPE type_decl_list

   50 type_decl_list: type_decl_list type_def
   51               | type_def

   52 type_def: identifier EQUAL type_decl SEMICOLON
   53         | identifier EQUAL type_decl

   54 type_decl: simple_type
   55          | array_type_decl
   56          | record_type_decl

   57 record_type_decl: RECORD field_decl_list END

   58 field_decl_list: field_decl_list field_decl
   59                | field_decl

   60 field_decl: name_list COLON type_decl SEMICOLON
   61           | name_list COLON type_decl

   62 array_type_decl: ARRAY LB simple_type RB OF type_decl

   63 simple_type: identifier
   64            | LP name_list RP
   65            | const_value DOUBLEDOT const_value
   66            | identifier DOUBLEDOT identifier
   67            | INT_TYPE
   68            | BOOL_TYPE
   69            | CHAR_TYPE

   70 name_list: name_list COMMA identifier
   71          | identifier

   72 identifier: IDENT_NAME

   73 routine_body: compound_stmt

   74 compound_stmt: BBEGIN stmt_list END
   75              | BBEGIN stmt_list

   76 compound_loop_stmt: BBEGIN loop_stmt_list END
   77                   | BBEGIN loop_stmt_list

   78 stmt_list: ε
   79          | stmt_list stmt SEMICOLON
   80          | stmt_list stmt

   81 loop_stmt_list: ε
   82               | loop_stmt_list loop_stmt SEMICOLON
   83               | loop_stmt_list loop_stmt

   84 stmt: INTEGER COLON no_label_stmt
   85     | no_label_stmt

   86 loop_stmt: INTEGER COLON no_label_loop_stmt
   87          | no_label_loop_stmt

   88 no_label_stmt: assign_stmt
   89              | compound_stmt
   90              | goto_stmt
   91              | if_stmt
   92              | repeat_stmt
   93              | while_stmt
   94              | case_stmt
   95              | for_stmt
   96              | proc_stmt

   97 no_label_loop_stmt: assign_stmt
   98                   | compound_loop_stmt
   99                   | goto_stmt
  100                   | if_loop_stmt
  101                   | repeat_stmt
  102                   | while_stmt
  103                   | case_loop_stmt
  104                   | for_stmt
  105                   | proc_stmt
  106                   | BREAK
  107                   | CONTINUE

  108 assign_stmt: lvalue ASSIGN expression

  109 goto_stmt: GOTO INTEGER

  110 if_stmt: IF expression THEN stmt else_clause
  111        | IF expression stmt else_clause

  112 if_loop_stmt: IF expression THEN loop_stmt else_loop_clause
  113             | IF expression loop_stmt else_loop_clause

  114 else_clause: ε
  115            | ELSE stmt

  116 else_loop_clause: ε
  117                 | ELSE loop_stmt

  118 repeat_stmt: REPEAT loop_stmt_list UNTIL expression
  119            | ε

  120 while_stmt: WHILE expression DO loop_stmt

  121 case_stmt: CASE expression OF case_expr_list END

  122 case_loop_stmt: CASE expression OF case_loop_expr_list END

  123 case_expr_list: case_expr_list case_expr
  124               | case_expr

  125 case_loop_expr_list: case_loop_expr_list case_loop_expr
  126                    | case_loop_expr

  127 case_expr: expression COLON stmt SEMICOLON
  128          | OTHERWISE stmt SEMICOLON

  129 case_loop_expr: expression COLON loop_stmt SEMICOLON
  130               | OTHERWISE loop_stmt SEMICOLON

  131 for_stmt: for_head loop_stmt

  132 for_head: FOR identifier ASSIGN expression TO expression DO
  133         | FOR identifier ASSIGN expression DOWNTO expression DO

  134 proc_stmt: identifier
  135          | identifier LP args_list RP
  136          | READ LP factor RP
  137          | READLN
  138          | WRITE LP args_list RP
  139          | WRITELN
  140          | WRITELN LP args_list RP
  141          | MEMORYREAD LP args_list RP
  142          | MEMORYWRITE LP args_list RP
  143          | STACKREAD LP args_list RP
  144          | STACKWRITE LP args_list RP

  145 args_list: args_list COMMA expression
  146          | expression

  147 expression: expression GE expr
  148           | expression GT expr
  149           | expression LE expr
  150           | expression LT expr
  151           | expression EQUAL expr
  152           | expression UNEQUAL expr
  153           | expr

  154 expr: expr PLUS term
  155     | expr MINUS term
  156     | expr OR term
  157     | term

  158 term: term MUL factor
  159     | term DIV factor
  160     | term MOD factor
  161     | term AND factor
  162     | factor

  163 factor: identifier LP args_list RP
  164       | lvalue
  165       | const_value
  166       | LP expression RP
  167       | NOT factor
  168       | MINUS factor
  169       | ABS LP args_list RP
  170       | CHR LP args_list RP
  171       | ODD LP args_list RP
  172       | ORD LP args_list RP
  173       | PRED LP args_list RP
  174       | SUCC LP args_list RP
  175       | TOINT LP args_list RP
  176       | TOCHAR LP args_list RP
  177       | TOBOOL LP args_list RP

  178 lvalue: identifier
  179       | identifier LB expression RB
  180       | lvalue LB expression RB
  181       | identifier DOT identifier
  182       | lvalue DOT identifier


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM <token> (258) 1 2 3 4
    FUNCTION <token> (259) 16
    PROCEDURE <token> (260) 21
    CONST <token> (261) 35
    TYPE <token> (262) 49
    VAR <token> (263) 26 29
    BBEGIN <token> (264) 74 75 76 77
    END <token> (265) 57 74 76 121 122
    IDENT_NAME <token> (266) 1 2 3 4 16 21 72
    INTEGER <token> (267) 40 41 84 86 109
    BOOLEAN <token> (268)
    CHAR <token> (269) 42
    STRING <token> (270) 43
    TRUE <token> (271) 44
    FALSE <token> (272) 45
    MAXINT <token> (273) 46 47
    READ <token> (274) 136
    READLN <token> (275) 137
    WRITE <token> (276) 138
    WRITELN <token> (277) 139 140
    MEMORYREAD <token> (278) 141
    MEMORYWRITE <token> (279) 142
    STACKREAD <token> (280) 143
    STACKWRITE <token> (281) 144
    ABS <token> (282) 169
    CHR <token> (283) 170
    ODD <token> (284) 171
    ORD <token> (285) 172
    PRED <token> (286) 173
    SUCC <token> (287) 174
    TOINT <token> (288) 175
    TOCHAR <token> (289) 176
    TOBOOL <token> (290) 177
    IF <token> (291) 110 111 112 113
    THEN <token> (292) 110 112
    ELSE <token> (293) 115 117
    REPEAT <token> (294) 118
    UNTIL <token> (295) 118
    WHILE <token> (296) 120
    DO <token> (297) 120 132 133
    CASE <token> (298) 121 122
    TO <token> (299) 132
    DOWNTO <token> (300) 133
    FOR <token> (301) 132 133
    EQUAL <token> (302) 38 39 52 53 151
    UNEQUAL <token> (303) 152
    GE <token> (304) 147
    GT <token> (305) 148
    LE <token> (306) 149
    LT <token> (307) 150
    ASSIGN <token> (308) 108 132 133
    PLUS <token> (309) 154
    MINUS <token> (310) 41 47 155 168
    MUL <token> (311) 158
    DIV <token> (312) 159
    OR <token> (313) 156
    AND <token> (314) 161
    NOT <token> (315) 167
    MOD <token> (316) 160
    LB <token> (317) 62 179 180
    RB <token> (318) 62 179 180
    LP <token> (319) 23 64 135 136 138 140 141 142 143 144 163 166 169 170 171 172 173 174 175 176 177
    RP <token> (320) 23 64 135 136 138 140 141 142 143 144 163 166 169 170 171 172 173 174 175 176 177
    SEMICOLON <token> (321) 1 2 12 13 14 17 18 19 24 32 38 52 60 79 82 127 128 129 130
    DOT <token> (322) 1 3 181 182
    DOUBLEDOT <token> (323) 65 66
    COMMA <token> (324) 70 145
    COLON <token> (325) 16 26 27 32 33 60 61 84 86 127 129
    INT_TYPE <token> (326) 67
    BOOL_TYPE <token> (327) 68
    CHAR_TYPE <token> (328) 69
    ARRAY <token> (329) 62
    OF <token> (330) 62 121 122
    RECORD <token> (331) 57
    GOTO <token> (332) 109
    BREAK <token> (333) 106
    CONTINUE <token> (334) 107
    OTHERWISE (335) 128 130
    ERROR <token> (336)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    program <programNode> (83)
        on left: 1 2 3 4
        on right: 0
    routine <routineNode> (84)
        on left: 5
        on right: 1 2 3 4 12 13 14 15 17 18 19 20
    routine_head <routineHeadNode> (85)
        on left: 6
        on right: 5
    routine_part <routinePartList> (86)
        on left: 7 8 9 10 11
        on right: 6 8 9
    fun_decl <routineDeclarationNode> (87)
        on left: 12 13 14 15
        on right: 8 10
    fun_head <routineDeclarationNode> (88)
        on left: 16
        on right: 12 13 14 15
    proc_decl <routineDeclarationNode> (89)
        on left: 17 18 19 20
        on right: 9 11
    proc_head <routineDeclarationNode> (90)
        on left: 21
        on right: 17 18 19 20
    params <paramsNode> (91)
        on left: 22 23
        on right: 16 21
    params_decl <paramsGroupList> (92)
        on left: 24 25
        on right: 23 24
    params_type <paramsGroupNode> (93)
        on left: 26 27
        on right: 24 25
    var_part <varPartList> (94)
        on left: 28 29
        on right: 6
    var_decl_list <varPartList> (95)
        on left: 30 31
        on right: 29 30
    var_decl <varPartListElement> (96)
        on left: 32 33
        on right: 30 31
    const_part <constPartList> (97)
        on left: 34 35
        on right: 6
    const_expr_list <constPartList> (98)
        on left: 36 37
        on right: 35 36
    const_expr <constPartListElement> (99)
        on left: 38 39
        on right: 36 37
    const_value <constantNode> (100)
        on left: 40 41 42 43 44 45 46 47
        on right: 38 39 65 165
    type_part <typePartList> (101)
        on left: 48 49
        on right: 6
    type_decl_list <typePartList> (102)
        on left: 50 51
        on right: 49 50
    type_def <typePartListElement> (103)
        on left: 52 53
        on right: 50 51
    type_decl <typeNode> (104)
        on left: 54 55 56
        on right: 32 33 52 53 60 61 62
    record_type_decl <recordTypeNode> (105)
        on left: 57
        on right: 56
    field_decl_list <fieldDeclList> (106)
        on left: 58 59
        on right: 57 58
    field_decl <fieldDeclListElement> (107)
        on left: 60 61
        on right: 58 59
    array_type_decl <arrayTypeNode> (108)
        on left: 62
        on right: 55
    simple_type <simpleTypeNode> (109)
        on left: 63 64 65 66 67 68 69
        on right: 16 26 27 54 62
    name_list <identifierList> (110)
        on left: 70 71
        on right: 26 27 32 33 60 61 64 70
    identifier <identifierNode> (111)
        on left: 72
        on right: 38 39 52 53 63 66 70 71 132 133 134 135 163 178 179 181 182
    routine_body <routineBodyNode> (112)
        on left: 73
        on right: 5
    compound_stmt <compoundStatementNode> (113)
        on left: 74 75
        on right: 73 89
    compound_loop_stmt <compoundStatementNode> (114)
        on left: 76 77
        on right: 98
    stmt_list <statementNodeList> (115)
        on left: 78 79 80
        on right: 74 75 79 80
    loop_stmt_list <statementNodeList> (116)
        on left: 81 82 83
        on right: 76 77 82 83 118
    stmt <statementNode> (117)
        on left: 84 85
        on right: 79 80 110 111 115 127 128
    loop_stmt <statementNode> (118)
        on left: 86 87
        on right: 82 83 112 113 117 120 129 130 131
    no_label_stmt <statementNode> (119)
        on left: 88 89 90 91 92 93 94 95 96
        on right: 84 85
    no_label_loop_stmt <statementNode> (120)
        on left: 97 98 99 100 101 102 103 104 105 106 107
        on right: 86 87
    assign_stmt <assignNode> (121)
        on left: 108
        on right: 88 97
    goto_stmt <gotoNode> (122)
        on left: 109
        on right: 90 99
    if_stmt <ifNode> (123)
        on left: 110 111
        on right: 91
    if_loop_stmt <ifNode> (124)
        on left: 112 113
        on right: 100
    else_clause <ifNode> (125)
        on left: 114 115
        on right: 110 111
    else_loop_clause <ifNode> (126)
        on left: 116 117
        on right: 112 113
    repeat_stmt <repeatNode> (127)
        on left: 118 119
        on right: 92 101
    while_stmt <whileNode> (128)
        on left: 120
        on right: 93 102
    case_stmt <caseNode> (129)
        on left: 121
        on right: 94
    case_loop_stmt <caseNode> (130)
        on left: 122
        on right: 103
    case_expr_list <caseExprList> (131)
        on left: 123 124
        on right: 121 123
    case_loop_expr_list <caseExprList> (132)
        on left: 125 126
        on right: 122 125
    case_expr <caseExpr> (133)
        on left: 127 128
        on right: 123 124
    case_loop_expr <caseExpr> (134)
        on left: 129 130
        on right: 125 126
    for_stmt <forNode> (135)
        on left: 131
        on right: 95 104
    for_head <forNode> (136)
        on left: 132 133
        on right: 131
    proc_stmt <callNode> (137)
        on left: 134 135 136 137 138 139 140 141 142 143 144
        on right: 96 105
    args_list <argsList> (138)
        on left: 145 146
        on right: 135 138 140 141 142 143 144 145 163 169 170 171 172 173 174 175 176 177
    expression <expressionNode> (139)
        on left: 147 148 149 150 151 152 153
        on right: 108 110 111 112 113 118 120 121 122 127 129 132 133 145 146 147 148 149 150 151 152 166 179 180
    expr <expressionNode> (140)
        on left: 154 155 156 157
        on right: 147 148 149 150 151 152 153 154 155 156
    term <expressionNode> (141)
        on left: 158 159 160 161 162
        on right: 154 155 156 157 158 159 160 161
    factor <expressionNode> (142)
        on left: 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177
        on right: 136 158 159 160 161 162 167 168
    lvalue <expressionNode> (143)
        on left: 178 179 180 181 182
        on right: 108 164 180 182


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • IDENT_NAME SEMICOLON routine DOT
    2        | PROGRAM • IDENT_NAME SEMICOLON routine
    3        | PROGRAM • IDENT_NAME routine DOT
    4        | PROGRAM • IDENT_NAME routine

    IDENT_NAME  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM IDENT_NAME • SEMICOLON routine DOT
    2        | PROGRAM IDENT_NAME • SEMICOLON routine
    3        | PROGRAM IDENT_NAME • routine DOT
    4        | PROGRAM IDENT_NAME • routine

    CONST      shift, and go to state 5
    SEMICOLON  shift, and go to state 6

    $default  reduce using rule 34 (const_part)

    routine       go to state 7
    routine_head  go to state 8
    const_part    go to state 9


State 4

    0 $accept: program $end •

    $default  accept


State 5

   35 const_part: CONST • const_expr_list

    IDENT_NAME  shift, and go to state 10

    const_expr_list  go to state 11
    const_expr       go to state 12
    identifier       go to state 13


State 6

    1 program: PROGRAM IDENT_NAME SEMICOLON • routine DOT
    2        | PROGRAM IDENT_NAME SEMICOLON • routine

    CONST  shift, and go to state 5

    $default  reduce using rule 34 (const_part)

    routine       go to state 14
    routine_head  go to state 8
    const_part    go to state 9


State 7

    3 program: PROGRAM IDENT_NAME routine • DOT
    4        | PROGRAM IDENT_NAME routine •

    DOT  shift, and go to state 15

    $default  reduce using rule 4 (program)


State 8

    5 routine: routine_head • routine_body

    BBEGIN  shift, and go to state 16

    routine_body   go to state 17
    compound_stmt  go to state 18


State 9

    6 routine_head: const_part • type_part var_part routine_part

    TYPE  shift, and go to state 19

    $default  reduce using rule 48 (type_part)

    type_part  go to state 20


State 10

   72 identifier: IDENT_NAME •

    $default  reduce using rule 72 (identifier)


State 11

   35 const_part: CONST const_expr_list •
   36 const_expr_list: const_expr_list • const_expr

    IDENT_NAME  shift, and go to state 10

    $default  reduce using rule 35 (const_part)

    const_expr  go to state 21
    identifier  go to state 13


State 12

   37 const_expr_list: const_expr •

    $default  reduce using rule 37 (const_expr_list)


State 13

   38 const_expr: identifier • EQUAL const_value SEMICOLON
   39           | identifier • EQUAL const_value

    EQUAL  shift, and go to state 22


State 14

    1 program: PROGRAM IDENT_NAME SEMICOLON routine • DOT
    2        | PROGRAM IDENT_NAME SEMICOLON routine •

    DOT  shift, and go to state 23

    $default  reduce using rule 2 (program)


State 15

    3 program: PROGRAM IDENT_NAME routine DOT •

    $default  reduce using rule 3 (program)


State 16

   74 compound_stmt: BBEGIN • stmt_list END
   75              | BBEGIN • stmt_list

    $default  reduce using rule 78 (stmt_list)

    stmt_list  go to state 24


State 17

    5 routine: routine_head routine_body •

    $default  reduce using rule 5 (routine)


State 18

   73 routine_body: compound_stmt •

    $default  reduce using rule 73 (routine_body)


State 19

   49 type_part: TYPE • type_decl_list

    IDENT_NAME  shift, and go to state 10

    type_decl_list  go to state 25
    type_def        go to state 26
    identifier      go to state 27


State 20

    6 routine_head: const_part type_part • var_part routine_part

    VAR  shift, and go to state 28

    $default  reduce using rule 28 (var_part)

    var_part  go to state 29


State 21

   36 const_expr_list: const_expr_list const_expr •

    $default  reduce using rule 36 (const_expr_list)


State 22

   38 const_expr: identifier EQUAL • const_value SEMICOLON
   39           | identifier EQUAL • const_value

    INTEGER  shift, and go to state 30
    CHAR     shift, and go to state 31
    STRING   shift, and go to state 32
    TRUE     shift, and go to state 33
    FALSE    shift, and go to state 34
    MAXINT   shift, and go to state 35
    MINUS    shift, and go to state 36

    const_value  go to state 37


State 23

    1 program: PROGRAM IDENT_NAME SEMICOLON routine DOT •

    $default  reduce using rule 1 (program)


State 24

   74 compound_stmt: BBEGIN stmt_list • END
   75              | BBEGIN stmt_list •
   79 stmt_list: stmt_list • stmt SEMICOLON
   80          | stmt_list • stmt

    BBEGIN       shift, and go to state 16
    END          shift, and go to state 38
    IDENT_NAME   shift, and go to state 10
    INTEGER      shift, and go to state 39
    READ         shift, and go to state 40
    READLN       shift, and go to state 41
    WRITE        shift, and go to state 42
    WRITELN      shift, and go to state 43
    MEMORYREAD   shift, and go to state 44
    MEMORYWRITE  shift, and go to state 45
    STACKREAD    shift, and go to state 46
    STACKWRITE   shift, and go to state 47
    IF           shift, and go to state 48
    REPEAT       shift, and go to state 49
    WHILE        shift, and go to state 50
    CASE         shift, and go to state 51
    FOR          shift, and go to state 52
    GOTO         shift, and go to state 53

    $end         reduce using rule 75 (compound_stmt)
    $end         [reduce using rule 119 (repeat_stmt)]
    FUNCTION     reduce using rule 75 (compound_stmt)
    FUNCTION     [reduce using rule 119 (repeat_stmt)]
    PROCEDURE    reduce using rule 75 (compound_stmt)
    PROCEDURE    [reduce using rule 119 (repeat_stmt)]
    BBEGIN       [reduce using rule 75 (compound_stmt)]
    BBEGIN       [reduce using rule 119 (repeat_stmt)]
    END          [reduce using rule 75 (compound_stmt)]
    END          [reduce using rule 119 (repeat_stmt)]
    IDENT_NAME   [reduce using rule 75 (compound_stmt)]
    IDENT_NAME   [reduce using rule 119 (repeat_stmt)]
    INTEGER      [reduce using rule 75 (compound_stmt)]
    INTEGER      [reduce using rule 119 (repeat_stmt)]
    READ         [reduce using rule 75 (compound_stmt)]
    READ         [reduce using rule 119 (repeat_stmt)]
    READLN       [reduce using rule 75 (compound_stmt)]
    READLN       [reduce using rule 119 (repeat_stmt)]
    WRITE        [reduce using rule 75 (compound_stmt)]
    WRITE        [reduce using rule 119 (repeat_stmt)]
    WRITELN      [reduce using rule 75 (compound_stmt)]
    WRITELN      [reduce using rule 119 (repeat_stmt)]
    MEMORYREAD   [reduce using rule 75 (compound_stmt)]
    MEMORYREAD   [reduce using rule 119 (repeat_stmt)]
    MEMORYWRITE  [reduce using rule 75 (compound_stmt)]
    MEMORYWRITE  [reduce using rule 119 (repeat_stmt)]
    STACKREAD    [reduce using rule 75 (compound_stmt)]
    STACKREAD    [reduce using rule 119 (repeat_stmt)]
    STACKWRITE   [reduce using rule 75 (compound_stmt)]
    STACKWRITE   [reduce using rule 119 (repeat_stmt)]
    IF           [reduce using rule 75 (compound_stmt)]
    IF           [reduce using rule 119 (repeat_stmt)]
    ELSE         reduce using rule 75 (compound_stmt)
    ELSE         [reduce using rule 119 (repeat_stmt)]
    REPEAT       [reduce using rule 75 (compound_stmt)]
    REPEAT       [reduce using rule 119 (repeat_stmt)]
    WHILE        [reduce using rule 75 (compound_stmt)]
    WHILE        [reduce using rule 119 (repeat_stmt)]
    CASE         [reduce using rule 75 (compound_stmt)]
    CASE         [reduce using rule 119 (repeat_stmt)]
    FOR          [reduce using rule 75 (compound_stmt)]
    FOR          [reduce using rule 119 (repeat_stmt)]
    SEMICOLON    reduce using rule 75 (compound_stmt)
    SEMICOLON    [reduce using rule 119 (repeat_stmt)]
    DOT          reduce using rule 75 (compound_stmt)
    DOT          [reduce using rule 119 (repeat_stmt)]
    GOTO         [reduce using rule 75 (compound_stmt)]
    GOTO         [reduce using rule 119 (repeat_stmt)]
    $default     reduce using rule 75 (compound_stmt)

    identifier     go to state 54
    compound_stmt  go to state 55
    stmt           go to state 56
    no_label_stmt  go to state 57
    assign_stmt    go to state 58
    goto_stmt      go to state 59
    if_stmt        go to state 60
    repeat_stmt    go to state 61
    while_stmt     go to state 62
    case_stmt      go to state 63
    for_stmt       go to state 64
    for_head       go to state 65
    proc_stmt      go to state 66
    lvalue         go to state 67


State 25

   49 type_part: TYPE type_decl_list •
   50 type_decl_list: type_decl_list • type_def

    IDENT_NAME  shift, and go to state 10

    $default  reduce using rule 49 (type_part)

    type_def    go to state 68
    identifier  go to state 27


State 26

   51 type_decl_list: type_def •

    $default  reduce using rule 51 (type_decl_list)


State 27

   52 type_def: identifier • EQUAL type_decl SEMICOLON
   53         | identifier • EQUAL type_decl

    EQUAL  shift, and go to state 69


State 28

   29 var_part: VAR • var_decl_list

    IDENT_NAME  shift, and go to state 10

    var_decl_list  go to state 70
    var_decl       go to state 71
    name_list      go to state 72
    identifier     go to state 73


State 29

    6 routine_head: const_part type_part var_part • routine_part

    FUNCTION   shift, and go to state 74
    PROCEDURE  shift, and go to state 75

    FUNCTION   [reduce using rule 7 (routine_part)]
    PROCEDURE  [reduce using rule 7 (routine_part)]
    $default   reduce using rule 7 (routine_part)

    routine_part  go to state 76
    fun_decl      go to state 77
    fun_head      go to state 78
    proc_decl     go to state 79
    proc_head     go to state 80


State 30

   40 const_value: INTEGER •

    $default  reduce using rule 40 (const_value)


State 31

   42 const_value: CHAR •

    $default  reduce using rule 42 (const_value)


State 32

   43 const_value: STRING •

    $default  reduce using rule 43 (const_value)


State 33

   44 const_value: TRUE •

    $default  reduce using rule 44 (const_value)


State 34

   45 const_value: FALSE •

    $default  reduce using rule 45 (const_value)


State 35

   46 const_value: MAXINT •

    $default  reduce using rule 46 (const_value)


State 36

   41 const_value: MINUS • INTEGER
   47            | MINUS • MAXINT

    INTEGER  shift, and go to state 81
    MAXINT   shift, and go to state 82


State 37

   38 const_expr: identifier EQUAL const_value • SEMICOLON
   39           | identifier EQUAL const_value •

    SEMICOLON  shift, and go to state 83

    $default  reduce using rule 39 (const_expr)


State 38

   74 compound_stmt: BBEGIN stmt_list END •

    $default  reduce using rule 74 (compound_stmt)


State 39

   84 stmt: INTEGER • COLON no_label_stmt

    COLON  shift, and go to state 84


State 40

  136 proc_stmt: READ • LP factor RP

    LP  shift, and go to state 85


State 41

  137 proc_stmt: READLN •

    $default  reduce using rule 137 (proc_stmt)


State 42

  138 proc_stmt: WRITE • LP args_list RP

    LP  shift, and go to state 86


State 43

  139 proc_stmt: WRITELN •
  140          | WRITELN • LP args_list RP

    LP  shift, and go to state 87

    $default  reduce using rule 139 (proc_stmt)


State 44

  141 proc_stmt: MEMORYREAD • LP args_list RP

    LP  shift, and go to state 88


State 45

  142 proc_stmt: MEMORYWRITE • LP args_list RP

    LP  shift, and go to state 89


State 46

  143 proc_stmt: STACKREAD • LP args_list RP

    LP  shift, and go to state 90


State 47

  144 proc_stmt: STACKWRITE • LP args_list RP

    LP  shift, and go to state 91


State 48

  110 if_stmt: IF • expression THEN stmt else_clause
  111        | IF • expression stmt else_clause

    IDENT_NAME  shift, and go to state 10
    INTEGER     shift, and go to state 30
    CHAR        shift, and go to state 31
    STRING      shift, and go to state 32
    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    MAXINT      shift, and go to state 35
    ABS         shift, and go to state 92
    CHR         shift, and go to state 93
    ODD         shift, and go to state 94
    ORD         shift, and go to state 95
    PRED        shift, and go to state 96
    SUCC        shift, and go to state 97
    TOINT       shift, and go to state 98
    TOCHAR      shift, and go to state 99
    TOBOOL      shift, and go to state 100
    MINUS       shift, and go to state 101
    NOT         shift, and go to state 102
    LP          shift, and go to state 103

    const_value  go to state 104
    identifier   go to state 105
    expression   go to state 106
    expr         go to state 107
    term         go to state 108
    factor       go to state 109
    lvalue       go to state 110


State 49

  118 repeat_stmt: REPEAT • loop_stmt_list UNTIL expression

    $default  reduce using rule 81 (loop_stmt_list)

    loop_stmt_list  go to state 111


State 50

  120 while_stmt: WHILE • expression DO loop_stmt

    IDENT_NAME  shift, and go to state 10
    INTEGER     shift, and go to state 30
    CHAR        shift, and go to state 31
    STRING      shift, and go to state 32
    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    MAXINT      shift, and go to state 35
    ABS         shift, and go to state 92
    CHR         shift, and go to state 93
    ODD         shift, and go to state 94
    ORD         shift, and go to state 95
    PRED        shift, and go to state 96
    SUCC        shift, and go to state 97
    TOINT       shift, and go to state 98
    TOCHAR      shift, and go to state 99
    TOBOOL      shift, and go to state 100
    MINUS       shift, and go to state 101
    NOT         shift, and go to state 102
    LP          shift, and go to state 103

    const_value  go to state 104
    identifier   go to state 105
    expression   go to state 112
    expr         go to state 107
    term         go to state 108
    factor       go to state 109
    lvalue       go to state 110


State 51

  121 case_stmt: CASE • expression OF case_expr_list END

    IDENT_NAME  shift, and go to state 10
    INTEGER     shift, and go to state 30
    CHAR        shift, and go to state 31
    STRING      shift, and go to state 32
    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    MAXINT      shift, and go to state 35
    ABS         shift, and go to state 92
    CHR         shift, and go to state 93
    ODD         shift, and go to state 94
    ORD         shift, and go to state 95
    PRED        shift, and go to state 96
    SUCC        shift, and go to state 97
    TOINT       shift, and go to state 98
    TOCHAR      shift, and go to state 99
    TOBOOL      shift, and go to state 100
    MINUS       shift, and go to state 101
    NOT         shift, and go to state 102
    LP          shift, and go to state 103

    const_value  go to state 104
    identifier   go to state 105
    expression   go to state 113
    expr         go to state 107
    term         go to state 108
    factor       go to state 109
    lvalue       go to state 110


State 52

  132 for_head: FOR • identifier ASSIGN expression TO expression DO
  133         | FOR • identifier ASSIGN expression DOWNTO expression DO

    IDENT_NAME  shift, and go to state 10

    identifier  go to state 114


State 53

  109 goto_stmt: GOTO • INTEGER

    INTEGER  shift, and go to state 115


State 54

  134 proc_stmt: identifier •
  135          | identifier • LP args_list RP
  178 lvalue: identifier •
  179       | identifier • LB expression RB
  181       | identifier • DOT identifier

    LB   shift, and go to state 116
    LP   shift, and go to state 117
    DOT  shift, and go to state 118

    ASSIGN    reduce using rule 178 (lvalue)
    LB        [reduce using rule 178 (lvalue)]
    DOT       [reduce using rule 134 (proc_stmt)]
    DOT       [reduce using rule 178 (lvalue)]
    $default  reduce using rule 134 (proc_stmt)


State 55

   89 no_label_stmt: compound_stmt •

    $default  reduce using rule 89 (no_label_stmt)


State 56

   79 stmt_list: stmt_list stmt • SEMICOLON
   80          | stmt_list stmt •

    SEMICOLON  shift, and go to state 119

    SEMICOLON  [reduce using rule 80 (stmt_list)]
    $default   reduce using rule 80 (stmt_list)


State 57

   85 stmt: no_label_stmt •

    $default  reduce using rule 85 (stmt)


State 58

   88 no_label_stmt: assign_stmt •

    $default  reduce using rule 88 (no_label_stmt)


State 59

   90 no_label_stmt: goto_stmt •

    $default  reduce using rule 90 (no_label_stmt)


State 60

   91 no_label_stmt: if_stmt •

    $default  reduce using rule 91 (no_label_stmt)


State 61

   92 no_label_stmt: repeat_stmt •

    $default  reduce using rule 92 (no_label_stmt)


State 62

   93 no_label_stmt: while_stmt •

    $default  reduce using rule 93 (no_label_stmt)


State 63

   94 no_label_stmt: case_stmt •

    $default  reduce using rule 94 (no_label_stmt)


State 64

   95 no_label_stmt: for_stmt •

    $default  reduce using rule 95 (no_label_stmt)


State 65

  131 for_stmt: for_head • loop_stmt
